Bug 747257 - Part 1: Load .mp4 files in a document wrapper. r=rillian When compiled with --enable-gstreamer, use a document loader for video/mp4, and associate that type with the decoder in nsHTMLMediaElement.

Bug 422540 fix lets gstreamer render h.264 videos from within webpages with
<video>, however to view these files when loaded directly we need to recognize
their Content-Type.